Flattened the descriptions and authorities
